--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <style>
 .center {
@@ -14,10 +14,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>recetas de estefany</title>
 </head>
 <body>
-    <h1>Sitio web de Ejemplo para Mentores</h1>
+    <h1>recetas de postres</h1>
     <h2>Sitio para que los mentores lo utilicen como ejemplo cuando desarrollen sus propios sitios.</h2>
     <P>Edite el código según sea necesario para cumplir con los requisitos de su página.</P>
     
