--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <h1>recetas de postres</h1>
-    <h2>Sitio para que los mentores lo utilicen como ejemplo cuando desarrollen sus propios sitios.</h2>
-    <P>Edite el código según sea necesario para cumplir con los requisitos de su página.</P>
+    <h2>recetas que te cambiaran la vida.</h2>
+    <P>les comparto estas recetas que les ayudara en su negocio o para preparar deliciosas recetas a sus familias.</P>
     
     <div class="center">
         <img width="400" src="./assets/svg/mentores-card.svg" alt="Logo Guatestar y Mentores">
