--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <P>les comparto estas recetas que les ayudara en su negocio o para preparar deliciosas recetas a sus familias.</P>
     
     <div class="center">
-        <img width="400" src="./assets/img/close-up-fancy-dessert.jpg>
+        <img width="400" src="./assets/img/close-up-fancy-dessert.jpg">
     </div>
 
     <h2>Plan de desarrollo recomendado usando los <a href="https://mentores2024.mayalink.org/programaci%C3%B3n.html">Recursos de Programación</a></h2>        :</h2>
