--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     <h2>Plan de desarrollo recomendado usando los <a href="https://mentores2024.mayalink.org/programaci%C3%B3n.html">Recursos de Programación</a></h2>        :</h2>
     
     <ol>
-        <li>Cree una cuenta de GitHub como se explica en el Tutorial de GitHub.</li>
+        <li>ingredientes.</li>
         <ul>
-            <li>Haga clic en el botón disponible en la pagina "Recursos de Programación"</li>
+            <li>chocolate</li>
+            <li>galletas</li>
+            <li>cafe</li>
+            <li>cuarto ingrediente</li>
+            <li>quinto ingrediente</li>
         </ul>
         <li>Utilice el código (botón 1b) uno para hacer que un sitio html simple esté disponible en línea.</li>
         <li>Reemplace el código de su sitio con el del sitio de ejemplo (botón 2b).</li>
