--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
             <li>cuarto ingrediente</li>
             <li>quinto ingrediente</li>
         </ul>
-        <li>Utilice el código (botón 1b) uno para hacer que un sitio html simple esté disponible en línea.</li>
+        <li>preparacion.</li>
+        <ol>
+            <li>preparar el cafe</li>
+            <li>remojar las galletas en el cafe</li>
+            <li>colocarle chocolate en polvo</li>
+            <li>cuarto paso</li>
+            <li>quinto paso</li>
+        </ol>
         <li>Reemplace el código de su sitio con el del sitio de ejemplo (botón 2b).</li>
         <li>Personaliza su sitio editando el código.</li>
         <li>Decida qué características del sitio "MayaLink version html" (botón 3a) le gustaría incorporar en su sitio.</li>
